cli/tests/snapshots/help__help_inspect_logical_resolve.snap
---
source: cli/tests/help.rs
expression: "help(&[\"inspect\", \"logical-resolve\"])"
---
Get file system paths for the given logical address

Usage: logical-resolve [OPTIONS] <LOGICAL> <PATH>

Arguments:
  <LOGICAL>
          Logical address

  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
  -P
          Skip the path resolving and print the inodes instead

  -o
          Ignore offsets when matching references

  -s <BUFSIZE>
          Set inode container's size

  -h, --help
          Print help
