cli/tests/snapshots/help__help_inspect_map_swapfile.snap
---
source: cli/tests/help.rs
expression: "help(&[\"inspect\", \"map-swapfile\"])"
---
Print physical extents of a file suitable for swap

Usage: map-swapfile <PATH>

Arguments:
  <PATH>
          Path to a file on the btrfs filesystem

Options:
  -h, --help
          Print help
