cli/tests/snapshots/help__help_inspect_min_dev_size.snap
---
source: cli/tests/help.rs
expression: "help(&[\"inspect\", \"min-dev-size\"])"
---
Print the minimum size a device can be shrunk to.

Returns the minimum size in bytes that the specified device can be resized to without losing data.
The device id 1 is used by default. Requires CAP_SYS_ADMIN.

Usage: min-dev-size [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
      --id <DEVID>
          Specify the device id to query
          
          [default: 1]

  -h, --help
          Print help (see a summary with '-h')
