cli/tests/snapshots/help__help_inspect_rootid.snap
---
source: cli/tests/help.rs
expression: "help(&[\"inspect\", \"rootid\"])"
---
Get tree ID of the containing subvolume of path

Usage: rootid <PATH>

Arguments:
  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
  -h, --help
          Print help
