cli/tests/snapshots/help__help_inspect_subvolid_resolve.snap
---
source: cli/tests/help.rs
expression: "help(&[\"inspect\", \"subvolid-resolve\"])"
---
Get subvolume ID and tree ID of the given path

Usage: subvolid-resolve <SUBVOLID> <PATH>

Arguments:
  <SUBVOLID>
          Subvolume ID to resolve

  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
  -h, --help
          Print help
